unpackaged/main/default/objects/Core_SQR__c/Core_SQR__c.object-meta.xml
<CustomObject>
    <label>Core SQR</label>
    <nameField>
        <label>Core SQR Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Core SQRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>