unpackaged/main/default/objects/Core_SQR__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Core SQRs</relationshipLabel>
    <relationshipName>Core_SQRs</relationshipName>
    <type>Lookup</type>
</CustomField>