unpackaged/main/default/objects/Core_SQR__c/fields/CORE_SQR_Last_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_Last_Sent_Date__c</fullName>
    <label>CORE SQR Last Sent Date Time</label>
    <type>DateTime</type>
</CustomField>